# HNVCore

./: .gitignore  CMakeLists.txt  camera.cpp  notes.txt
Archives/: sphere.cpp
src/: main.cpp
src/Archives/: sphere.h
src/Core/: gui.cpp  main_window.cpp  shader.cpp  shaders.cpp
src/Core/Ressources_files/: fragment.glsl  vertex.glsl
src/Movement/: orbitalCamera.cpp  orbitalCamera.h
src/Object/: hypersphere.cpp
src/Objects/: cube.cpp
src/Rendering/: shaders.cpp  shaders.h
src/include/: hypersphère.h
src/maths/: rotation.cpp
src/shaders/: fshad.glsl  vshad.glsl
